# stack-ide

./: .gitignore  .gitmodules  .travis.yml  README.md  ide-backend-client.cabal  stack-7.8.yaml  stack.yaml
app/: main.hs
ide-backend-client/: ide-backend-client.cabal
ide-backend-client/app/: main.hs
ide-backend-client/src/IdeSession/: Client.hs
ide-backend-client/src/IdeSession/Client/: AnnotateHaskell.hs  AnnotateMessage.hs  Cabal.hs  CmdLine.hs
ide-backend-json/: README.md  ide-backend-json.cabal
ide-backend-json/src/IdeSession/Client/: JsonAPI.hs
ide-backend-json/src/IdeSession/Client/JsonAPI/: Aux.hs  Common.hs  Public.hs
src/IdeSession/: Client.hs
src/IdeSession/Client/: AnnotateMessage.hs  AnnotateTypeInfo.hs  Cabal.hs  CmdLine.hs  JsonAPI.hs
src/IdeSession/Client/Util/: ValueStream.hs
stack-ide/: README.md  stack-ide.cabal
stack-ide-api/: README.md  stack-ide-api.cabal
stack-ide-api/src/Stack/Ide/: JsonAPI.hs
stack-ide-api/src/Stack/Ide/JsonAPI/: Aux.hs  TH.hs
stack-ide/src/Stack/: Ide.hs
stack-ide/src/Stack/Ide/: AnnotateHaskell.hs  AnnotateMessage.hs  Cabal.hs  CmdLine.hs
stack-ide/src/Stack/Ide/Util/: ValueStream.hs
stack-ide/src/main/: Main.hs
stack-mode/: README.md  checklist.el  stack-fifo.el  stack-mode.el
