name:                ide-backend-client
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ide-backend-client
  main-is:             IdeSession/Client.hs
  -- other-modules:
  build-depends:       base                 >= 4.5  && < 5,
                       aeson                >= 0.7  && < 0.9,
                       ansi-wl-pprint       >= 0.6  && < 0.7,
                       attoparsec           >= 0.12 && < 0.13,
                       bytestring           >= 0.10 && < 0.11,
                       -- NOTE: Cabal 1.22 has some backwards incompatible API
                       -- changes. If we want to support older Cabal we need to
                       -- introduce a shim.
                       Cabal                >= 1.22 && < 1.23,
                       directory            >= 1.2  && < 1.3,
                       filepath             >= 1.3  && < 1.4,
                       ide-backend          >= 0.9  && < 1.0,
                       JsonGrammar          >= 1.0  && < 1.1,
                       language-typescript  >= 0.0  && < 0.1,
                       optparse-applicative >= 0.11 && < 0.12,
                       stack-prism          >= 0.1  && < 0.2,
                       text                 >= 1.1  && < 1.2,
                       utf8-string          >= 0.3  && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  default-extensions:  DataKinds
                       FlexibleInstances
                       NoMonomorphismRestriction
                       OverlappingInstances
                       RankNTypes
                       RecordWildCards
                       StandaloneDeriving
                       TypeOperators
                       BangPatterns
  other-extensions:    OverloadedStrings
                       TemplateHaskell
