name:                ide-backend-client
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag use-cabal
  description: Enable ide-backend-client cabal support
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     IdeSession.Client
                       IdeSession.Client.AnnotateTypeInfo
                       IdeSession.Client.CmdLine
                       IdeSession.Client.Util.ValueStream
  if flag(use-cabal)
      ghc-options:     -DUSE_CABAL
      exposed-modules: IdeSession.Client.Cabal
                       -- NOTE: Cabal 1.22 has some backwards incompatible API
                       -- changes. If we want to support older Cabal we need to
                       -- introduce a shim.
      build-depends:   Cabal                >= 1.22 && < 1.23
  build-depends:       base                 >= 4.5  && < 5,
                       async                >= 2.0  && < 2.1,
                       JsonGrammar          >= 1.0  && < 1.1,
                       aeson                >= 0.7  && < 0.9,
                       ansi-wl-pprint       >= 0.6  && < 0.7,
                       attoparsec           >= 0.12 && < 0.13,
                       bytestring           >= 0.10 && < 0.11,
                       directory            >= 1.2  && < 1.3,
                       filepath             >= 1.3  && < 1.5,
                       ide-backend          >= 0.9  && < 1.0,
                       language-typescript  >= 0.0  && < 0.1,
                       optparse-applicative >= 0.11 && < 0.12,
                       stack-prism          >= 0.1  && < 0.2,
                       text                 >= 1.1  && < 1.3,
                       utf8-string          >= 0.3  && < 1.1,
                       ide-backend-json     == 0.1.0.0,
                       ide-backend-common   >= 0.9.1,
                       haskell-src-exts     >= 1.15
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  default-extensions:  DataKinds
                       FlexibleInstances
                       NoMonomorphismRestriction
                       OverlappingInstances
                       RankNTypes
                       RecordWildCards
                       StandaloneDeriving
                       TypeOperators
                       BangPatterns
                       ViewPatterns
                       ScopedTypeVariables
  other-extensions:    OverloadedStrings
                       TemplateHaskell
                       TupleSections

executable ide-backend-client
  hs-source-dirs:      app
  main-is:             main.hs
  build-depends:       base                 >= 4.5  && < 5,
                       aeson                >= 0.7  && < 0.9,
                       bytestring           >= 0.10 && < 0.11,
                       ide-backend-client,
                       ide-backend-json
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  if flag(use-cabal)
      ghc-options:     -DUSE_CABAL
