name:                ide-backend-client
version:             0.1.0.0
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IdeSession.Client
                       IdeSession.Client.AnnotateHaskell
                       IdeSession.Client.AnnotateMessage
                       IdeSession.Client.CmdLine
                       IdeSession.Client.Util.ValueStream
  build-depends:       base                 >= 4.5  && < 5,
                       async,
                       aeson,
                       ansi-wl-pprint,
                       attoparsec,
                       bytestring,
                       directory,
                       filepath,
                       ide-backend,
                       optparse-applicative,
                       text,
                       ide-backend-json     == 0.1.0.0,
                       ide-backend-common,
                       haskell-src-exts     >= 1.15,
                       safe,
                       text-icu             >= 0.7,
                       spoon
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ide-backend-client
  hs-source-dirs:      app
  main-is:             main.hs
  build-depends:       base                 >= 4.5  && < 5,
                       aeson               ,
                       bytestring          ,
                       ide-backend-client,
                       ide-backend-json
  default-language:    Haskell2010
  ghc-options:         -Wall
