name:                stack-ide-api
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack.Ide.JsonAPI
                       Stack.Ide.JsonAPI.Aux
  build-depends:       base                 >= 4.5  && < 5,
                       ide-backend-common   >= 0.9  && < 0.10,
                       aeson                >= 0.7  && < 0.9,
                       bytestring           >= 0.10 && < 0.11,
                       text                 >= 1.1  && < 1.3
  default-language:    Haskell2010
  ghc-options:         -Wall
